--- a/NAZ_EDP_ACT5/packages.config
+++ b/NAZ_EDP_ACT5/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ExcelDataReader" version="3.6.0" targetFramework="net472" />
+  <package id="ExcelDataReader.DataSet" version="3.6.0" targetFramework="net472" />
   <package id="Google.Protobuf" version="3.21.9" targetFramework="net472" />
   <package id="K4os.Compression.LZ4" version="1.2.6" targetFramework="net472" />
   <package id="K4os.Compression.LZ4.Streams" version="1.2.6" targetFramework="net472" />
